k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-devops-platform
  labels:
    app.kubernetes.io/part-of: banking-devops-platform
