k8s/32-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-api
  namespace: banking-devops-platform
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: banking.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-api
                port:
                  number: 80
