k8s/52-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-web
  namespace: banking-devops-platform
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: ops.banking.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-web
                port:
                  number: 80
